# DeepMT

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  README_CONFIG.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: defect_classifier.py
api/: __init__.py  deepmt.py
core/: __init__.py  config_loader.py  ir_manager.py  logger.py  oracle_evaluator.py  plugins_manager.py  results_manager.py  scheduler.py  test_runner.py
data/mr_repository/: mr_templates.yaml
data/operator_catalog/: paddlepaddle.yaml  pytorch_exclude.yaml
deepmt/: __init__.py  __main__.py  _utils.py  cli.py  client.py  ir.py
deepmt/analysis/: __init__.py  application_reporter.py  cross_framework_tester.py  defect_case_builder.py  defect_classifier.py  defect_deduplicator.py  evidence_collector.py  experiment_organizer.py  input_generator.py  model_verifier.py  mr_prechecker.py  mr_verifier.py  mutation_tester.py  random_generator.py  repo_audit.py
deepmt/application/: __init__.py
deepmt/benchmarks/: __init__.py  suite.py
deepmt/commands/: __init__.py  case.py  catalog.py  data.py  experiment.py  health.py  mr.py  repo.py  test.py  ui.py
deepmt/core/: __init__.py  config_loader.py  config_manager.py  framework.py  health_checker.py  ir_manager.py  logger.py  oracle_evaluator.py  plugins_manager.py  results_manager.py  run_manifest.py  scheduler.py  subject_registry.py  (+1 more)
demo/: debug_enrich.py  debug_generate.py  debug_verify.py  demo_cross_framework.py  demo_defect_dedup.py  demo_evidence.py  demo_experiment.py  demo_mutation_test.py  demo_open_test.py  demo_report.py  demo_sympy_proof.py  golden_path.py  quick_demo.py
docs/: README.md  cli_reference.md  demo_golden_path.md  demo_video_guide.md  design.md  development_status.md  environment_variables.md  f11_web_dashboard_design.md  operator_catalog_design.md  operator_mr_technical.md  optimization_plan.md  optimization_summary.md  phase_m_defect_hunting_process.md  quick_start.md  status.md  thesis_project_alignment_analysis.md  web_dashboard.md  面向深度学习框架的蜕变关系自动生成与分层测试体系研究.md
examples/: ir_persistence_example.py  operator_test_example.py  user_friendly_example.py
ir/: converter.py  schema.py
monitoring/: __init__.py  __main__.py  health_checker.py  progress_tracker.py
mr_generator/: __init__.py  code_to_sympy.py  knowledge_base.py  llm_mr_generator.py  model_mr.py  mr_deriver.py  mr_repository.py  operator_info_fetcher.py  operator_mr.py  sympy_prover.py  web_search_tool.py
plugins/: framework_adapter.py  pytorch_plugin.py
tests/: conftest.py  test_agent_integration.py  test_agent_tools.py  test_ast_parser.py  test_operator_mr_separation.py  test_oracle_evaluator.py  test_phase3_regression.py  test_relu_mr.py  test_search_tool.py  test_sympy_prover.py  test_sympy_translator.py
(+283 files in other folders)
