[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deepmt"
version = "0.1.0"
description = "A metamorphic relation automatic generation and hierarchical testing system for deep learning frameworks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
web-search = [
    "pylatexenc>=2.10",
]

[project.scripts]
deepmt = "deepmt.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepmt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
