[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmt"
version = "0.1.0"
description = "A metamorphic relation automatic generation and hierarchical testing system for deep learning frameworks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["metamorphic testing", "deep learning", "pytorch", "software testing", "test oracle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "pyyaml>=5.4.0",
    "click>=8.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]
web-search = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "pylatexenc>=2.10",
]
sympy = [
    "sympy>=1.9.0",
]
ui = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
paddle = [
    "paddlepaddle>=2.5.0",
]
all = [
    "deepmt[llm,web-search,sympy,ui]",
]

[project.scripts]
deepmt = "deepmt.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepmt*"]

[tool.setuptools.package-data]
"deepmt.plugins" = ["*.yaml"]
"deepmt.mr_generator.base" = ["*.yaml"]
"deepmt.ui" = ["templates/**/*.html", "static/**/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
